# rm2-pdf-backup

./: .gitignore  AGENTS.md  README.md  SPEC.md  TEST_PLAN.md  mypy.ini  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  dev-readiness.yml  rm2-ssh-smoke-test.yml  rpi-dev-pdf-compose.yml  rpi-dev-raw-backup.yml  rpi-dev-raw-copy.yml  rpi-dev-renderer-probe.yml  rpi-dev-rmrl-probe.yml  rpi-dev-run-local.yml  rpi-dev-svg-renderer.yml  rpi-dev-systemd-validate.yml  rpi-dev-template-render-probe.yml  rpi-dev-two-run.yml  rpi-diagnostics.yml  rpi-runner-test.yml  (+1 more)
config/: dev.example.toml
docs/: AGENT_WORKFLOW.md  README.md  app-config-example.toml  dev-readiness-report.md  install-config-run.md  local-config-example.toml  mvp-production-deployment.md  pdf-publication.md  raw-copy-diagnostic.md  rpi-dev-systemd.md  rpi-install.md  rpi-selected-rerender.md  rpi-ssh-access.md  run-local-rpi-test-extra.md  run-local-rpi-test.md  template-handling.md  template-notes.md  two-run-diagnostic.md
fixtures/: README.md
scripts/: dev_readiness_report.py  rerender_selected_notebooks.py  rpi_diagnostics.sh
tests/: test_composition.py  test_config.py  test_deploy_files.py  test_dev_readiness_report.py  test_imports.py  test_metadata.py  test_plan_cli.py  test_publish.py  test_raw_sync.py  test_render_queue.py  test_rmc_svg_renderer.py  test_rmc_svg_template_renderer.py  test_runner.py  test_runner_publish.py  test_runner_report.py  test_template_compose.py  test_templates.py  test_tree.py
(+46 files in other folders)
