[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rm2-pdf-backup"
version = "0.1.0"
description = "Raspberry Pi backup and local PDF export workflow for reMarkable 2 notebooks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sharif Ahmed" }
]
dependencies = []

[project.optional-dependencies]
rmc = [
  "rmc",
  "cairosvg",
  "pypdf",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
rm2-backup = "rm2_backup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rm2_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_errors = true
packages = ["rm2_backup"]
